--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -75,5 +75,6 @@
     </plurals>
     <string name="offline_label_title">There is no connection</string>
     <string name="offline_label_subtitle">Make sure you have an internet connection for the application to use them</string>
+    <string name="loading_access">Access in progress...</string>
 
 </resources>
