--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -77,5 +77,9 @@
     <string name="settings_title">Settings</string>
     <string name="player1_message">Tap the screen to start the game</string>
     <string name="player2_message">Wait for your partner to start the game</string>
+    <string name="confirm_exit_message">De verdad quieres dejar el juego?</string>
+    <string name="confirm_yes">yes</string>
+    <string name="confirm_no">no</string>
+    <string name="interrupt_message">game stopped!</string>
 
 </resources>
