- logica di vincita del gioco con Dialog in arcade e editor mode - modificato landscape DialogResultGame in arcade mode - modificato landscape splashscreen

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -81,5 +81,6 @@
     <string name="confirm_yes">yes</string>
     <string name="confirm_no">no</string>
     <string name="interrupt_message">game stopped!</string>
+    <string name="level_completed_message">You have completed all levels in multiplayer!</string>
 
 </resources>
