--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -81,4 +81,5 @@
     <string name="confirm_yes">si</string>
     <string name="confirm_no">no</string>
     <string name="interrupt_message">juego detenido!</string>
+    <string name="level_completed_message">Has completado todos los niveles en multijugador!</string>
 </resources>
