- in ricerca livelli condivisi sono inclusi i propri livelli - fix eliminazione livelli in UploadLevelActivity - messo bottone di uscita dall'applicazione

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -82,5 +82,6 @@
     <string name="confirm_no">no</string>
     <string name="interrupt_message">game stopped!</string>
     <string name="level_completed_message">You have completed all levels in multiplayer!</string>
+    <string name="exit_app">exit</string>
 
 </resources>
