--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -83,4 +83,5 @@
     <string name="interrupt_message">juego detenido!</string>
     <string name="level_completed_message">Has completado todos los niveles en multijugador!</string>
     <string name="exit_app">fuera</string>
+    <string name="interrupt_message_connection">juego interrumpido debido a problemas de conexión</string>
 </resources>
